# shade

./: .gitignore  Cargo.toml  canvas.js  globe.wasm  index.html  index.js  license.txt  oldtree.wasm  readme.md  shade.js  triangle.wasm  webgl.wasm  webtext.wasm  zeldawater.wasm
.github/workflows/: check.yml  gh-pages.yml
assets/d2/: readme.md
assets/font/: atlas.json  font-ascii.txt  font-symbols.txt  font.ini  font.json
atlaskit/: Cargo.toml  readme.md
atlaskit/src/: build.rs  info.rs  main.rs
docs/: msdfgen.md
examples/: atlaskit.rs  bunny.rs  colortree.rs  conway.rs  cube.rs  dither.rs  earth.rs  globe.rs  mandelbrot.rs  oldtree.rs  panels.rs  pixelart.rs  polygon.rs  readme.md  scene.rs  screenmelt.rs  shadertoy.rs  test.rs  text.rs  text3d.rs  textintro.rs  triangle.rs  vertex_decl.rs  zeldawater.rs
examples/demos/: Cargo.toml
examples/desktop/: Cargo.toml
examples/desktop/src/: main.rs
examples/font/: font.json
examples/renderer/: bunny.rs  colortree.rs  cube.rs  globe.rs  heightmap.rs  main.rs  oldtree.rs  parallax.rs  particles.rs
examples/webgl/: Cargo.toml  build.bat  build.sh  publish.sh  readme.md  run.sh
examples/webgl/globe/: Cargo.toml
examples/webgl/globe/src/: api.rs  lib.rs
examples/webgl/html/: canvas.html  canvas.js  index.css  index.html  index.js  shade.js
examples/webgl/oldtree/: Cargo.toml
examples/webgl/oldtree/src/: api.rs  lib.rs
examples/webgl/pixelart/: Cargo.toml
examples/webgl/pixelart/src/: api.rs  lib.rs
examples/webgl/src/: api.rs  globe.rs  lib.rs  oldtree.rs  pixelart.rs  text.rs  text3d.rs  textintro.rs  triangle.rs  zeldawater.rs
examples/webgl/text/: Cargo.toml
examples/webgl/text/src/: lib.rs
examples/webgl/triangle/: Cargo.toml
examples/webgl/triangle/src/: api.rs  lib.rs
examples/webgl/zeldawater/: Cargo.toml
examples/webgl/zeldawater/src/: api.rs  lib.rs
skills/: msdfgen.md
src/: atlas.rs  buffer.rs  camera.rs  canvas.rs  color.rs  common.rs  dither.rs  graphics.rs  handle.rs  image.rs  include_bin.rs  lib.rs  msdfgen.rs  new_canvas.rs  png.rs  resources.rs  shader.rs  sstring.rs  surface.rs  texture.rs  traits.rs  types.rs  uniform.rs  util.rs  vertex.rs
src/camera/: arcballv1.rs  arcballv2.rs  firstperson.rs  tests.rs
src/d2/: buffer.rs  canvas.rs  cmdbuf.rs  color.rs  curve.rs  drawbuf.rs  layout.rs  mod.rs  paint.rs  panel.rs  pen.rs  polygon.rs  pool.rs  post_process.rs  readme.md  scribe.rs  shader.rs  sprite.rs  stamp.rs  textured.rs  uniform.rs  vertex.rs
src/d3/: axes.rs  camera.rs  color3d.rs  frustum.rs  gizmos.rs  icosahedron.rs  macros.rs  mesh.rs  mod.rs  submesh.rs  textured.rs
src/gl/: buffers.rs  check.rs  cvt.rs  draw.rs  generation.rs  mod.rs  objects.rs  shader.rs  shaders.rs  texture2d.rs
src/gui/: app.rs  appstate.rs  cursor.rs  draw.rs  dto.rs  event.rs  mod.rs  props.rs  readme.md  resources.rs  scene.rs  slotmap.rs  widget.rs  widgets.rs
src/im/: drawbuf.rs  mod.rs  pool.rs
src/image/: animated.rs  binpack.rs  decoded.rs  format.rs  gif.rs  image.rs  io.rs  mod.rs  png.rs
src/model/: mod.rs  obj.rs  stl.rs
src/shader/: lang.rs  tests.rs
src/shaders/: color.glsl  color3d.glsl  glsl300es.rs  glsl330core.rs  gradient.glsl  mod.rs  mtsdf.glsl  pixelart.glsl  post_process.copy.glsl  post_process.crt.glsl  post_process.melt.glsl  post_process.pixelart.glsl  textured.glsl
src/soft/: canvas.rs  graphics.rs  mod.rs  solid.rs  surf.rs  uniforms.rs
src/svg/: graphics.rs  mod.rs
src/webgl/: api.rs  draw.rs  mod.rs  objects.rs  shader.rs  shaders.rs  texture2d.rs
webgldemo/: readme.md
webgldemo/html/: index.html  (+1 more)
(+132 files in other folders)
