[package]
name = "shade"
version = "0.0.2"
edition = "2021"

[features]
default = ["gl", "png", "msdfgen"]
msdfgen = ["serde"]

[dependencies]
dataview = "1.0"
cvmath = { version = "0.0.1", features = ["dataview"] }
gl = { version = "0.6", optional = true }
png = { version = "0.17", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
glutin = "0.26"
winit = "0.24"
stl = "0.2"
