[workspace]
members = [
	".",
	"examples/webgl/triangle",
	"examples/webgl/oldtree",
	"examples/webgl/text",
	"examples/webgl/zeldawater",
	"examples/webgl/globe",
]

[package]
name = "shade"
version = "0.0.4"
edition = "2021"

authors = ["Casper <CasualX@users.noreply.github.com>"]
description = "Another graphics library"
documentation = "https://docs.rs/shade"
repository = "https://github.com/CasualX/shade"
readme = "readme.md"
license = "MIT"
keywords = ["gfx", "shader", "opengl", "2d"]
categories = ["rendering", "graphics", "game-development", "gui"]

[features]
default = ["gl", "png", "gif", "jpeg", "msdfgen"]
webgl = []
msdfgen = ["serde"]
jpeg = ["dep:zune-jpeg"]
serde = ["dep:serde", "cvmath/serde"]

[dependencies]
dataview = "1.0"
cvmath = { version = "0.0.6", features = ["dataview"] }
gl = { version = "0.14", optional = true }
png = { version = "0.17", optional = true }
gif = { version = "0.13", optional = true }
zune-jpeg = { version = "0.5", optional = true, features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
glutin = "0.32"
glutin-winit = "0.5"
winit = "0.30"
raw-window-handle = "0.6"
stl = "0.2"
urandom = "0.2"
