[package]
name = "webgl"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dataview = "1.0"
getrandom = { version = "0.2", features = ["custom"] }
shade = { path = "../..", default-features = false, features = ["webgl", "png", "gif", "jpeg", "msdfgen"] }
demos = { path = "../demos" }
serde_json = "1.0"
